fixed palette overflow on mobile`

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  max-width: 768px;
+  max-width: 756px;
 }
 
 .warp-palette-wrapper {
@@ -48,7 +48,7 @@ body {
 
 .warp-palette .paletteEntry {
   float: left;
-  margin: 10px;
+  margin: 7px;
   overflow: hidden;
 }
 
